<?xml version="1.0"?>
<package>
  <name>beginner_tutorials</name>
  <version>0.1.0</version>
  <description>The beginner_tutorials package for UVic Master on Robotics</description>

  <maintainer email="do.not.want.spam@uvic.cat">Juampe</maintainer>
  <license>BSD</license>
  <url type="repository">http://github.com/simium</url>
  <author email="do.not.want.spam@uvic.cat">Juampe</author>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
